SDK/Delphi/TitanEngine.pas


{TitanEngine.Dumper.functions}
  function DumpProcess(hProcess:THandle; ImageBase:LongInt; szDumpFileName:PAnsiChar; EntryPoint:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpProcess';
  function DumpProcessEx(ProcessId:LongInt; ImageBase:LongInt; szDumpFileName:PAnsiChar; EntryPoint:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpProcessEx';
  function DumpMemory(hProcess:THandle; MemoryStart,MemorySize:LongInt; szDumpFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpMemory';
  function DumpMemoryEx(ProcessId:LongInt; MemoryStart,MemorySize:LongInt; szDumpFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpMemoryEx';
  function DumpRegions(hProcess:THandle; szDumpFolder:PAnsiChar; DumpAboveImageBaseOnly:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpRegions';
  function DumpRegionsEx(ProcessId:LongInt; szDumpFolder:PAnsiChar; DumpAboveImageBaseOnly:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpRegionsEx';
  function DumpModule(hProcess:THandle; ModuleBase:LongInt; szDumpFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpModule';
  function DumpModuleEx(ProcessId:LongInt; ModuleBase:LongInt; szDumpFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'DumpModuleEx';
  function PastePEHeader(hProcess:THandle; ImageBase:LongInt; szDebuggedFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'PastePEHeader';
  function ExtractSection(szFileName,szDumpFileName:PAnsiChar; SectionNumber:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtractSection';
  function ResortFileSections(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ResortFileSections';
  function FindOverlay(szFileName:PAnsiChar; OverlayStart,OverlaySize:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'FindOverlay';
  function ExtractOverlay(szFileName,szExtactedFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtractOverlay';
  function AddOverlay(szFileName,szOverlayFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'AddOverlay';
  function CopyOverlay(szInFileName,szOutFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'CopyOverlay';
  function RemoveOverlay(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'RemoveOverlay';
  function MakeAllSectionsRWE(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'MakeAllSectionsRWE';
  function AddNewSectionEx(szFileName,szSectionName:PAnsiChar; SectionSize,SectionAttributes:LongInt; SectionContent:Pointer; ContentSize:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'AddNewSectionEx';
  function AddNewSection(szFileName,szSectionName:PAnsiChar; SectionSize:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'AddNewSection';
  function ResizeLastSection(szFileName:PAnsiChar; NumberOfExpandBytes:LongInt; AlignResizeData:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'ResizeLastSection';
  procedure SetSharedOverlay(szFileName:PAnsiChar); stdcall;  external 'TitanEngine.dll' name 'SetSharedOverlay';
  function GetSharedOverlay():PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'GetSharedOverlay';
  function DeleteLastSection(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'DeleteLastSection';
  function DeleteLastSectionEx(szFileName:PAnsiChar; NumberOfSections:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'DeleteLastSectionEx';
  function GetPE32DataFromMappedFile(FileMapVA,WhichSection,WhichData:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'GetPE32DataFromMappedFile';
  function GetPE32Data(szFileName:PAnsiChar; WhichSection,WhichData:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'GetPE32Data';
  function GetPE32DataFromMappedFileEx(FileMapVA:LongInt; DataStorage:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'GetPE32DataFromMappedFileEx';
  function GetPE32DataEx(szFileName:PAnsiChar; DataStorage:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'GetPE32DataEx';
  function SetPE32DataForMappedFile(FileMapVA,WhichSection,WhichData,NewDataValue:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'SetPE32DataForMappedFile';
  function SetPE32Data(szFileName:PAnsiChar; WhichSection,WhichData,NewDataValue:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'SetPE32Data';
  function SetPE32DataForMappedFileEx(szFileName:PAnsiChar; DataStorage:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'SetPE32DataForMappedFileEx';
  function SetPE32DataEx(szFileName:PAnsiChar; DataStorage:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'SetPE32DataEx';
  function GetPE32SectionNumberFromVA(FileMapVA,AddressToConvert:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'GetPE32SectionNumberFromVA';
  function ConvertVAtoFileOffset(FileMapVA,AddressToConvert:LongInt; ReturnType:boolean):LongInt; stdcall;  external 'TitanEngine.dll' name 'ConvertVAtoFileOffset';
  function ConvertVAtoFileOffsetEx(FileMapVA,FileSize,ImageBase,AddressToConvert:LongInt; AddressIsRVA,ReturnType:boolean):LongInt; stdcall;  external 'TitanEngine.dll' name 'ConvertVAtoFileOffsetEx';
  function ConvertFileOffsetToVA(FileMapVA,AddressToConvert:LongInt; ReturnType:boolean):LongInt; stdcall;  external 'TitanEngine.dll' name 'ConvertFileOffsetToVA';
  function ConvertFileOffsetToVAEx(FileMapVA,FileSize,ImageBase,AddressToConvert:LongInt; ReturnType:boolean):LongInt; stdcall;  external 'TitanEngine.dll' name 'ConvertFileOffsetToVAEx';
{TitanEngine.Realigner.functions}
  function FixHeaderCheckSum(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'FixHeaderCheckSum';
  function RealignPE(FileMapVA,FileSize,RealingMode:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'RealignPE';
  function RealignPEEx(szFileName:PAnsiChar; RealingFileSize,ForcedFileAlignment:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'RealignPEEx';
  function WipeSection(szFileName:PAnsiChar; WipeSectionNumber:LongInt; RemovePhysically:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'WipeSection';
  function IsPE32FileValidEx(szFileName:PAnsiChar; CheckDepth:LongInt; FileStatusInfo:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'IsPE32FileValidEx';
  function FixBrokenPE32FileEx(szFileName:PAnsiChar; FileStatusInfo,FileFixInfo:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'FixBrokenPE32FileEx';
  function IsFileDLL(szFileName:PAnsiChar; FileMapVA:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'IsFileDLL';
{TitanEngine.Hider.functions}
  function GetPEBLocation(hProcess:THandle):LongInt; stdcall;  external 'TitanEngine.dll' name 'GetPEBLocation';
  function HideDebugger(hProcess:THandle; PatchAPILevel:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'HideDebugger';
  function UnHideDebugger(hProcess:THandle; PatchAPILevel:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'UnHideDebugger';
{TitanEngine.Relocater.functions}
  procedure RelocaterCleanup(); stdcall;  external 'TitanEngine.dll' name 'RelocaterCleanup';
  procedure RelocaterInit(MemorySize,OldImageBase,NewImageBase:LongInt); stdcall;  external 'TitanEngine.dll' name 'RelocaterInit';
  procedure RelocaterAddNewRelocation(hProcess:THandle; RelocateAddress,RelocateState:LongInt); stdcall;  external 'TitanEngine.dll' name 'RelocaterAddNewRelocation';
  function RelocaterEstimatedSize():LongInt; stdcall;  external 'TitanEngine.dll' name 'RelocaterEstimatedSize';
  function RelocaterExportRelocation(StorePlace,StorePlaceRVA,FileMapVA:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterExportRelocation';
  function RelocaterExportRelocationEx(szFileName,szSectionName:PAnsiChar; StorePlace,StorePlaceRVA:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterExportRelocationEx';
  function RelocaterGrabRelocationTable(hProcess:THandle; MemoryStart,MemorySize:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterGrabRelocationTable';
  function RelocaterGrabRelocationTableEx(hProcess:THandle; MemoryStart,MemorySize,NtSizeOfImage:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterGrabRelocationTableEx';
  function RelocaterMakeSnapshot(hProcess:THandle; szSaveFileName:PAnsiChar; MemoryStart,MemorySize:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterMakeSnapshot';
  function RelocaterCompareTwoSnapshots(hProcess:THandle; LoadedImageBase,NtSizeOfImage:LongInt; szDumpFile1,szDumpFile2:PAnsiChar; MemStart:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterCompareTwoSnapshots';
  function RelocaterChangeFileBase(szFileName:PAnsiChar; NewImageBase:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterChangeFileBase';
  function RelocaterRelocateMemoryBlock(FileMapVA,MemoryLocation:LongInt; RelocateMemory:Pointer; RelocateMemorySize,CurrentLoadedBase,RelocateBase:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterRelocateMemoryBlock';
  function RelocaterWipeRelocationTable(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'RelocaterWipeRelocationTable';
{TitanEngine.Resourcer.functions}
  function ResourcerLoadFileForResourceUse(szFileName:PAnsiChar):LongInt; stdcall;  external 'TitanEngine.dll' name 'ResourcerLoadFileForResourceUse';
  function ResourcerFreeLoadedFile(LoadedFileBase:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ResourcerFreeLoadedFile';
  function ResourcerExtractResourceFromFileEx(FileMapVA:LongInt; szResourceType,szResourceName,szExtractedFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ResourcerExtractResourceFromFileEx';
  function ResourcerExtractResourceFromFile(szFileName,szResourceType,szResourceName,szExtractedFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ResourcerExtractResourceFromFile';
  function ResourcerFindResource(szFileName,szResourceType:PAnsiChar; ResourceType:LongInt; szResourceName:PAnsiChar; ResourceName,ResourceLanguage:LongInt; pResourceData,pResourceSize:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'ResourcerFindResource';
  function ResourcerFindResourceEx(FileMapVA,FileSize:LongInt; szResourceType:PAnsiChar; ResourceType:LongInt; szResourceName:PAnsiChar; ResourceName,ResourceLanguage:LongInt; pResourceData,pResourceSize:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'ResourcerFindResourceEx';
  procedure ResourcerEnumerateResource(szFileName:PAnsiChar; CallBack:LongInt); stdcall;  external 'TitanEngine.dll' name 'ResourcerEnumerateResource';
  procedure ResourcerEnumerateResourceEx(FileMapVA,FileSize:LongInt; CallBack:LongInt); stdcall;  external 'TitanEngine.dll' name 'ResourcerEnumerateResourceEx';
{TitanEngine.FindOEP.functions}
  procedure FindOEPInit(); stdcall;  external 'TitanEngine.dll' name 'FindOEPInit';
  procedure FindOEPGenerically(szFileName:PAnsiChar; TraceInitCallBack,CallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'FindOEPGenerically';
{TitanEngine.Threader.functions}
  function ThreaderImportRunningThreadData(ProcessId:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ThreaderImportRunningThreadData';
  function ThreaderGetThreadInfo(hThread:THandle; ThreadId:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'ThreaderGetThreadInfo';
  procedure ThreaderEnumThreadInfo(EnumCallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'ThreaderGetThreadInfo';
  function ThreaderPauseThread(hThread:THandle):boolean; stdcall;  external 'TitanEngine.dll' name 'ThreaderPauseThread';
